# claude-memory-hook

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md
claude-memory-vscode/: package-lock.json  package.json
claude-memory-vscode/src/: capture.ts  extension.ts  ingest.ts
src/: config.rs  main.rs
src/cli/: ingest.rs  install.rs  mod.rs  search.rs  status.rs
src/db/: mod.rs  notes.rs  schema.rs  sessions.rs
src/mcp/: server.rs  tools.rs
src/transcript/: copilot.rs  metadata.rs  mod.rs  parser.rs
