[package]
name = "claude-memory"
version = "0.1.0"
edition = "2021"
description = "Automatic session logging and recall for Claude Code"
license = "MIT"

[[bin]]
name = "claude-memory"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.34", features = ["bundled-full"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
